--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ axum = { version = "0.8.4" }
 tower-http = { version = "0.6.6", features = ["fs"] }
 handlebars = "6.3.2"
 serde = { version = "1.0.219", features = ["derive"] }
+envconfig = "0.11.0"
