--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokio = { version = "1.45.1", features = ["full"] }
-axum = { version = "0.8.4" }
-tower-http = { version = "0.6.6", features = ["fs"] }
-handlebars = "6.3.2"
-serde = { version = "1.0.219", features = ["derive"] }
-envconfig = "0.11.0"
+tokio = { version = "1.45", features = ["full"] }
+axum = { version = "0.8" }
+tower-http = { version = "0.6", features = ["fs", "trace"] }
+handlebars = "6.3"
+serde = { version = "1.0", features = ["derive"] }
+envconfig = "0.11"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing = "0.1"
+tracing-opentelemetry = "0.31"
+opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "tls"] }
+opentelemetry_sdk = "0.30"
+opentelemetry = "0.30"
+thiserror = "2.0"
