--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ opentelemetry = "0.30"
 thiserror = "2.0"
 uuid = {  version = "1.18", features = ["v7", "serde"] }
 chrono = { version =  "0.4", features = ["serde"] }
+sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid"]}
