--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.47", features = ["full"] }
-axum = { version = "0.8" }
+axum = { version = "0.8", features = ["macros"] }
 tower-http = { version = "0.6", features = ["fs", "trace"] }
 handlebars = "6.3"
 serde = { version = "1.0", features = ["derive"] }
